bug scrollbar fix

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -42,7 +42,6 @@ body,
 
 ::-webkit-scrollbar {
   width: 10px;
-  display: none;
 }
 
 ::-webkit-scrollbar-track {
